--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+
 </body>
 <script src="app.js"></script>
 </html>
